[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
chrono = "0.4.26"
clap = "4.3.11"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
nom = "7.1.3"
nom-supreme = "0.8.0"
num_cpus = "1.16.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.100"
thiserror = "1.0.43"
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "iridium"
harness = false
